# pycaret-redux

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
notebooks/: demo_classification.ipynb
pycaret_redux/: __init__.py  config.py  experiment.py
pycaret_redux/metrics/: __init__.py  definitions.py  registry.py  scoring.py
pycaret_redux/models/: __init__.py  definitions.py  factory.py  registry.py  tuning.py
pycaret_redux/persistence/: __init__.py  serialization.py
pycaret_redux/plots/: __init__.py  calibration.py  classification.py  evaluation.py  feature.py  gains.py  registry.py
pycaret_redux/preprocessing/: __init__.py  column_selection.py  encoding.py  feature_engineering.py  imbalance.py  imputation.py  outliers.py  pipeline.py  scaling.py  skew.py
pycaret_redux/tracking/: base.py  mlflow.py
pycaret_redux/training/: __init__.py  comparison.py  creation.py  cross_validation.py  ensembles.py  finalization.py  stats.py  tuning.py
pycaret_redux/utils/: display.py  drift.py  profiling.py  types.py  validation.py
tests/: test_experiment_init.py  test_high_priority.py  test_integration.py  test_phase5.py  test_phase7.py  test_plots.py  test_preprocessing.py  test_registries.py  test_training.py
