[project]
name = "pycaret-redux"
version = "0.1.0"
description = "A modernized, low-code classification library inspired by PyCaret"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.6",
    "scipy>=1.14",
    "joblib>=1.4",
    "matplotlib>=3.9",
    "plotly>=5.22",
    "tqdm>=4.66",
    "rich>=13.0",
    "category-encoders>=2.6",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
boosting = [
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "catboost>=1.2.7",
]
imbalance = [
    "imbalanced-learn>=0.12",
]
interpretation = [
    "shap>=0.46",
]
tracking = [
    "mlflow>=2.16",
]
tuning = [
    "optuna>=4.0",
]
full = [
    "pycaret-redux[boosting,imbalance,interpretation,tracking,tuning]",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]
